tema 2 new notation sigma

--- a/Class1MIMO.tex
+++ b/Class1MIMO.tex
@@ -95,13 +95,13 @@
 \begin{columns}[T]
 \begin{column}{5cm}\centering
 Office A-204\\
-Monday-Thursday 15:00-16:30\\
+Wednesday \& Thursday 15:00-18:00\\
 \texttt{gomezcuba@gts.uvigo.es}\\
 \end{column}
 \end{columns}
 }
 
-\date{}
+\date{2024}
 
 \begin{document}
 
